[package]
name = "mitmproxyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
actix-tls = "2"
rustls = "0.18"
rustls-pemfile = "0.2.1"
actix-files = "0.3"